5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1674_1879.log
== SUBMITION (2019-05-01 15:01:12) 
-- CODE:
h = float(input("informe o numero de horas extras: "))
f = float(input("informe o numero de horas nao cumpridas"))
print(h," extras e ", b, " de falta")
H = h - (1/4 * f)
if(H <= 400):
	g = 100.0
elif(H > 400 )
	g = 500.0
print("R$",round(g, 2))

-- EXECUTION TIME:
0.142696
-- ERROR:
  File "/home/codebench/codes/1674/1879/main.py", line 7
    elif(H > 400 )
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:01:17) 
-- CODE:
h = float(input("informe o numero de horas extras: "))
f = float(input("informe o numero de horas nao cumpridas"))
print(h," extras e ", b, " de falta")
H = h - (1/4 * f)
if(H <= 400):
	g = 100.0
elif(H > 400 )
	g = 500.0
print("R$",round(g, 2))

-- ERROR:
File "XXXX", line 7
    elif(H > 400 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:01:31) 
-- CODE:
h = float(input("informe o numero de horas extras: "))
f = float(input("informe o numero de horas nao cumpridas"))
print(h," extras e ", b, " de falta")
H = h - (1/4 * f)
if(H <= 400):
	g = 100.0
elif(H > 400 ):
	g = 500.0
print("R$",round(g, 2))

-- EXECUTION TIME:
0.146122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1879/main.py", line 3, in <module>
    print(h," extras e ", b, " de falta")
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:01:35) 
-- CODE:
h = float(input("informe o numero de horas extras: "))
f = float(input("informe o numero de horas nao cumpridas"))
print(h," extras e ", b, " de falta")
H = h - (1/4 * f)
if(H <= 400):
	g = 100.0
elif(H > 400 ):
	g = 500.0
print("R$",round(g, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(h," extras e ", b, " de falta")
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:02:13) 
-- CODE:
h = float(input("informe o numero de horas extras: "))
f = float(input("informe o numero de horas nao cumpridas"))
print(h," extras e ", f, " de falta")
H = h - (1/4 * f)
if(H <= 400):
	g = 100.0
elif(H > 400 ):
	g = 500.0
print("R$",round(g, 2))

-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:02:37) 
-- CODE:
h = float(input("informe o numero de horas extras: "))
f = float(input("informe o numero de horas nao cumpridas"))
print(h," extras e ", f, " de falta")
H = h - (1/4 * f)
if(H <= 400):
	g = 100.0
elif(H > 400 ):
	g = 500.0
print("R$",round(g, 2))

-- EXECUTION TIME:
0.212454
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
